--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -22,6 +22,7 @@ django-bootstrap4 = "~=2.3.1"
 django-allauth = "~=0.44.0"
 django-rest-auth = "~=0.9.5"
 django-extensions = "~=3.1.1"
+django-filter = "*"
 packaging = "*"
 drf-yasg = "~=1.20.0"
 # fcm-django is used for mobile notifications. It can be removed if unneeded.
