--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/slider": "^3.0.3",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
@@ -27,6 +29,7 @@
     "react": "16.11.0",
     "react-dom": "^17.0.1",
     "react-native": "0.62.0",
+    "react-native-bootsplash": "^3.2.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-debugger-open": "0.3.24",
     "react-native-dotenv": "^0.2.0",
@@ -47,6 +50,7 @@
     "react-navigation-drawer": "^2.3.4",
     "react-navigation-stack": "1.10.3",
     "react-redux": "7.1.3",
+    "react-spring-bottom-sheet": "^3.2.1",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
     "uuid": "^3.3.2"
@@ -55,9 +59,10 @@
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.11.2",
     "@react-native-community/eslint-config": "^0.0.5",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "metro-react-native-babel-preset": "^0.58.0",
     "react-app-rewired": "^2.1.8",
     "react-scripts": "^4.0.2",
-    "metro-react-native-babel-preset": "^0.58.0",
     "react-test-renderer": "16.11.0"
   },
   "browserslist": {
@@ -71,5 +76,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }	  
+  }
 }
